software/usb: add windows files to generate dll

--- a/software/usb/windows/Makefile
+++ b/software/usb/windows/Makefile
@@ -1,4 +1,15 @@
 
+CC=i686-w64-mingw32-gcc-posix
+CFLAGS_DLL =-Wall -O0 -g -shared -Wl,--subsystem,windows -DDLL
+LIBS= FTD3XXLibrary/Win32/FTD3XX.lib
 
-all:
-	i686-w64-mingw32-gcc-posix test.c FTD3XXLibrary/Win32/FTD3XX.lib -o test.exe
+all: libft601.dll
+	
+
+libft601.dll: FT601.c
+	$(CC) -o $@ $(CFLAGS_DLL) $^ $(LIBS)
+
+clean:
+	rm -f libft601.dll
+
+
