init new usb with server

--- a/software/usb/windows/Makefile
+++ b/software/usb/windows/Makefile
@@ -1,17 +1,4 @@
 
-CC=gcc
-CFLAGS_DLL =-Wall -O0 -g -shared -Wl,--subsystem,windows -DDLL
-LIBS= FTD3XXLibrary/Win32/FTD3XX.lib
 
-all: libft601.dll
-
-
-libft601.dll: FT601.c
-	$(CC) -o $@ $(CFLAGS_DLL) $^ $(LIBS)
-	cp libft601.dll ../libft601.dll
-	cp FTD3XXLibrary/Win32/FTD3XX.dll ../FTD3XX.dll
-
-clean:
-	rm -f libft601.dll
-
-
+all:
+	i686-w64-mingw32-gcc main.c FT601.c -o ftserver -I ./libevent-2.0.22-stable/include ./libevent-2.0.22-stable/.libs/*.a -lws2_32 FTD3XXLibrary/Win32/FTD3XX.lib
