--- a/openocd.cfg
+++ b/openocd.cfg
@@ -1,8 +1,7 @@
-# source [find interface/ftdi/digilent-hs2.cfg]
 interface ftdi
-ftdi_vid_pid 0x0403 0x6014
+ftdi_vid_pid 0x0403 0x6011
 ftdi_channel 0
-ftdi_layout_init 0x00e8 0x60eb
+ftdi_layout_init 0x0098 0x008b
 reset_config none
 
 source [find cpld/xilinx-xc7.cfg]
