reorganise openocd scripts

--- a/openocd/openocd.cfg
+++ b/openocd/openocd.cfg
@@ -9,6 +9,18 @@ source [find cpld/jtagspi.cfg]
 adapter_khz 10000
 
 proc fpga_program {} {
+    # jtagspi set_qe 0 1
     global _CHIPNAME
     xc7_program $_CHIPNAME.tap
 }
+
+proc flash_program {} {
+    init
+    jtagspi_init 0 openocd/bscan_spi_xc7a35t.bit
+    jtagspi_program build/gateware/top.bin 0x0
+}
+
+flash_program
+fpga_program
+
+exit
