--- a/openocd/openocd.cfg
+++ b/openocd/openocd.cfg
@@ -9,7 +9,7 @@ source [find cpld/jtagspi.cfg]
 adapter_khz 10000
 
 proc fpga_program {} {
-    # jtagspi set_qe 0 1
+    jtagspi set_qe 0 1
     global _CHIPNAME
     xc7_program $_CHIPNAME.tap
 }
